5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1601_2043.log
== TEST (2019-03-22 18:01:52) 
-- CODE:
n1= float(input("n1: "))
n2= float(input("n2: "))
n3= float(input("n3: "))
n4= float(input("n4: "))
mp= [(n1*1)+(n2*2)+(n3*3)+(n4*4)]//10
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mp= [(n1*1)+(n2*2)+(n3*3)+(n4*4)]//10
TypeError: unsupported operand type(s) for //: 'list' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:01:55) 
-- CODE:
n1= float(input("n1: "))
n2= float(input("n2: "))
n3= float(input("n3: "))
n4= float(input("n4: "))
mp= [(n1*1)+(n2*2)+(n3*3)+(n4*4)]//10
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mp= [(n1*1)+(n2*2)+(n3*3)+(n4*4)]//10
TypeError: unsupported operand type(s) for //: 'list' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:02:27) 
-- CODE:
n1= float(input("n1: "))
n2= float(input("n2: "))
n3= float(input("n3: "))
n4= float(input("n4: "))
mp= [(n1*1)+(n2*2)+(n3*3)+(n4*4)]//10
print(mp)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mp= [(n1*1)+(n2*2)+(n3*3)+(n4*4)]//10
TypeError: unsupported operand type(s) for //: 'list' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:03:03) 
-- CODE:
n1= float(input("n1: "))
n2= float(input("n2: "))
n3= float(input("n3: "))
n4= float(input("n4: "))
mp= (n1*1)+(n2*2)+(n3*3)+(n4*4)//10
print(mp)

-- OUTPUT:
49.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:05:05) 
-- CODE:
n1= float(input("n1: "))
n2= float(input("n2: "))
n3= float(input("n3: "))
n4= float(input("n4: "))
mp= ((n1*1)//10)+((n2*2)//10)+((n3*3)//10)+((n4*4)//10)
print(mp)

-- EXECUTION TIME:
0.13436
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
5.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:05:46) 
-- CODE:
n1= float(input("n1: "))
n2= float(input("n2: "))
n3= float(input("n3: "))
n4= float(input("n4: "))
mp= ((n1*1)//10)+((n2*2)//10)+((n3*3)//10)+((n4*4)//10)
print(round(mp, 2)

-- EXECUTION TIME:
0.163642
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:05:52) 
-- CODE:
n1= float(input("n1: "))
n2= float(input("n2: "))
n3= float(input("n3: "))
n4= float(input("n4: "))
mp= ((n1*1)//10)+((n2*2)//10)+((n3*3)//10)+((n4*4)//10)
print(round(mp, 2)

-- EXECUTION TIME:
0.163069
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:06:05) 
-- CODE:
n1= float(input("n1: "))
n2= float(input("n2: "))
n3= float(input("n3: "))
n4= float(input("n4: "))
mp= ((n1*1)//10)+((n2*2)//10)+((n3*3)//10)+((n4*4)//10)
print(round(mp, 2))

-- EXECUTION TIME:
0.167893
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
5.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
